# FlashPatch

./: .gitignore  Cargo.toml  FlashPatch.sln  LICENSE  README.md  build.rs
.github/workflows/: autobuild-workflow.yaml  build.yaml
FlashPatch/: App.config  App.xaml  App.xaml.cs  FlashPatch.csproj  HexPatch.cs  PatchForm.Designer.cs  PatchForm.cs  PatchForm.resx  PatchWindow.xaml  PatchWindow.xaml.cs  PatchableBinary.cs  Patcher.cs  Patches.cs  Program.cs  UpdateChecker.cs  WinAPI.cs  app.manifest
FlashPatch/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: font.rs  gui.rs  main.rs  patcher.rs  platform.rs  renderer.rs  widgets.rs
